--- a/tests/libtest/Makefile
+++ b/tests/libtest/Makefile
@@ -7,14 +7,14 @@ SRCS       = $(wildcard *.c)
 OBJS       = $(patsubst %.c,%.o,$(SRCS))
 
 CFLAGS    += -m32 -nostdlib -nostdinc -ffreestanding -Wall -Wextra -Werror -fno-stack-protector -I$(LIBINC)
-LDFLAGS    = -melf_i386 -T ../../linker_test.ld
+LDFLAGS    = -melf_i386 -T $(LIB)/linker.ld
 
 OUT        = libtest
 
 link:   $(OBJS)
 	@echo -e "\033[33m  \033[1mLinking sources\033[0m"
-	@ld $(LDFLAGS) -o $(OUT) ../../lib/crt/crt0.o $(OBJS) $(LIB)/liblambda.a
-	@objcopy -O binary libtest libtest.bin
+	@ld $(LDFLAGS) -o $(OUT) $(LIB)/crt/crt0.o $(OBJS) $(LIB)/liblambda.a
+#@objcopy -O binary $(OUT) $(OUT).bin
 
 all: link
 
@@ -26,4 +26,4 @@ all: link
 
 
 clean:
-	@rm -f $(OBJS) $(OUT)
+	@rm -f $(OBJS) $(OUT) $(OUT).bin
